--- a/src/main/webapp/html/my.html
+++ b/src/main/webapp/html/my.html
@@ -7,5 +7,20 @@
 <body>
 <h1>RPG admin panel</h1>
 
+<table id="myTable">
+    <tr>
+        <th>#</th>
+        <th>Name</th>
+        <th>Title</th>
+        <th>Race</th>
+        <th>Profession</th>
+        <th>Level</th>
+        <th>Birthday</th>
+        <th>Banned</th>
+    </tr>
+</table>
+<script>
+
+</script>
 </body>
 </html>
