--- a/src/main/webapp/html/my.html
+++ b/src/main/webapp/html/my.html
@@ -11,6 +11,15 @@
 <div class="container">
     <div class="table-block">
         <h1>RPG admin panel</h1>
+
+        <label for="count_pages">Count per page</label>
+        <select id="count_pages" onchange="showTable()">
+            <option value="3">3</option>
+            <option value="5">5</option>
+            <option value="10">10</option>
+            <option value="20">20</option>
+        </select>
+
         <table id="myTable">
             <tr>
                 <th>#</th>
@@ -23,7 +32,7 @@
                 <th>Banned</th>
             </tr>
         </table>
-        <div id="paging-buttons">Pages</div>
+        <div id="paging_buttons">Pages</div>
     </div>
 </div>
 <script>
@@ -43,7 +52,24 @@
                 ).appendTo("#myTable");
             });
         });
-        let total_count = getTotalCount();
+        let totalCount = getTotalCount();
+        let countPerPage = $("#count_pages").val();
+
+        if (countPerPage == null) {
+            countPerPage = 3;
+        }
+
+        let pagesCount = Math.ceil(totalCount/countPerPage);
+
+        for (let i = 0; i < pagesCount; i++) {
+            let buttonTag = "<button>" + (i + 1) + "</button>";
+            let btn = $(buttonTag)
+                .attr("id", "paging_button_" + i)
+                .attr("onclick", "showTable()")
+                .addClass("page-btn-style");
+
+            $("#paging_buttons").append(btn);
+        }
     }
 
     function getTotalCount() {
