--- a/src/main/webapp/html/my.html
+++ b/src/main/webapp/html/my.html
@@ -30,6 +30,8 @@
                 <th>Level</th>
                 <th>Birthday</th>
                 <th>Banned</th>
+                <th>Edit</th>
+                <th>Delete</th>
             </tr>
         </table>
         <div id="paging_buttons">Pages</div>
@@ -66,7 +68,13 @@
                     + item.profession + '</td><td>'
                     + item.level + '</td><td>'
                     + new Date(item.birthday).toLocaleDateString() + '</td><td>'
-                    + item.banned + '</td>'
+                    + item.banned + '</td><td>'
+                    + "<button id='buttonEdit_'" + item.id + ">"
+                    + "<img src='img/edit.png'>"
+                    + "</button></td><td>"
+                    + "<button id='buttonDelete_'" + item.id + ">"
+                    + "<img src='img/delete.png'>"
+                    + "</button></td></tr>"
                 ).appendTo("#myTable");
             });
         });
@@ -85,7 +93,14 @@
 
             $("#paging_buttons").append(btn);
         }
+
+        let identifier = "#paging_button_" + pageNumber;
+        $(identifier).css({
+            "color": "white",
+            "background-color": "black"
+        });
     }
+
 
     function getTotalCount() {
         let url = "/rest/players/count";
