--- a/src/main/webapp/html/my.html
+++ b/src/main/webapp/html/my.html
@@ -158,10 +158,10 @@
         let children_element = $(current_tr_element).children();
 
         let td_name = children_element[1];
-        td_name.innerHTML = "<input id='input_name' type='text' value='" + td_name.innerHTML + "'>";
+        td_name.innerHTML = "<input id='input_name_" + id + "' type='text' value='" + td_name.innerHTML + "'>";
 
         let td_title = children_element[2];
-        td_title.innerHTML = "<input id='input_title' type='text' value='" + td_title.innerHTML + "'>";
+        td_title.innerHTML = "<input id='input_title_" + id + "' type='text' value='" + td_title.innerHTML + "'>";
 
         let td_race = children_element[3];
         let race_id = "#select_race_" + id;
@@ -183,6 +183,36 @@
 
         let property_save_tag = "saveAccount(" + id + ")";
         $(identifier_edit).attr('onclick', property_save_tag);
+    }
+
+    function saveAccount(id) {
+        let value_name = $("#input_name_" + id).val();
+        console.log(value_name);
+        let value_title = $("#input_title_" + id).val();
+        console.log(value_title);
+
+        let value_race = $("#select_race_"+ id).val();
+        let value_profession = $("#select_profession_"+ id).val();
+        let value_banned = $("#select_banned_"+ id).val();
+
+        let url = "/rest/players/" + id;
+        $.ajax({
+            url: url,
+            type: 'POST',
+            dataType: 'json',
+            contentType: "application/json; charset=UTF-8",
+            async: false,
+            data: JSON.stringify({
+                "name": value_name,
+                "title": value_title,
+                "race": value_race,
+                "profession": value_profession,
+                "banned": value_banned
+            }),
+            success: function () {
+                showTable(getCurrentPage());
+            }
+        });
     }
 
     function getDropdownRaceHtml(id) {
