--- a/src/main/webapp/html/my.html
+++ b/src/main/webapp/html/my.html
@@ -38,7 +38,7 @@
         <div id="paging_buttons">Pages</div>
 
         <hr class="divider">
-
+        <!-- Modal -->
         <button id="openModal">Create new account:</button>
 
         <div id="userModal" class="modal">
@@ -52,8 +52,8 @@
                 <label for="input_title_new">Title:</label>
                 <input type="text" id="input_title_new" name="title" required maxlength="30">
 
-                <label for="input_race_new">Race:</label>
-                <select id='input_race_new' name='race'>
+                <label for="select_race_new">Race:</label>
+                <select id='select_race_new' name='race'>
                     <option value='HUMAN'>HUMAN</option>
                     <option value='DWARF'>DWARF</option>
                     <option value='ELF' selected>ELF</option>
@@ -63,8 +63,8 @@
                     <option value='HOBBIT'>HOBBIT</option>
                 </select>
 
-                <label for="input_profession_new">Profession:</label>
-                <select id='input_profession_new' name='profession'>
+                <label for="select_profession_new">Profession:</label>
+                <select id='select_profession_new' name='profession'>
                     <option value='WARRIOR'>WARRIOR</option>
                     <option value='ROGUE'>ROGUE</option>
                     <option value='SORCERER'>SORCERER</option>
@@ -81,8 +81,8 @@
                 <label for="input_birthday_new">Birthday:</label>
                 <input type="date" id="input_birthday_new" name="birthday" min="2000-01-01" max="30000-12-31">
 
-                <label for="input_banned_new">Banned:</label>
-                <select id='input_banned_new' name='banned'>
+                <label for="select_banned_new">Banned:</label>
+                <select id='select_banned_new' name='banned'>
                     <option value='false' selected>false</option>
                     <option value='true'>true</option>
                 </select>
@@ -242,13 +242,10 @@
 
     function saveAccount(id) {
         let value_name = $("#input_name_" + id).val();
-        console.log(value_name);
         let value_title = $("#input_title_" + id).val();
-        console.log(value_title);
-
-        let value_race = $("#select_race_"+ id).val();
-        let value_profession = $("#select_profession_"+ id).val();
-        let value_banned = $("#select_banned_"+ id).val();
+        let value_race = $("#select_race_" + id).val();
+        let value_profession = $("#select_profession_" + id).val();
+        let value_banned = $("#select_banned_" + id).val();
 
         let url = "/rest/players/" + id;
         $.ajax({
@@ -265,6 +262,46 @@
                 "banned": value_banned
             }),
             success: function () {
+                showTable(getCurrentPage());
+            }
+        });
+    }
+
+    function createAccount() {
+        let value_name = $("#input_name_new").val();
+        let value_title = $("#input_title_new").val();
+        let value_race = $("#select_race_new").val();
+        let value_profession = $("#select_profession_new").val();
+        let value_level = $("#input_level_new").val();
+        let value_birthday = $("#input_birthday_new").val();
+        let value_banned = $("#select_banned_new").val();
+
+        let url = "/rest/players";
+
+        $.ajax({
+            url: url,
+            type: 'POST',
+            dataType: 'json',
+            contentType: "application/json; charset=UTF-8",
+            async: false,
+            data: JSON.stringify({
+                "name": value_name,
+                "title": value_title,
+                "race": value_race,
+                "profession": value_profession,
+                "level": value_level,
+                "birthday": new Date(value_birthday).getTime(),
+                "banned": value_banned
+            }),
+            success: function () {
+                $("#input_name_new").val("");
+                $("#input_title_new").val("");
+                $("#select_race_new").val("");
+                $("#select_profession_new").val("");
+                $("#select_level_new").val("");
+                $("#input_birthday_new").val("");
+                $("#select_banned_new").val("");
+
                 showTable(getCurrentPage());
             }
         });
